--- a/test-output/old/Suite/methods-alphabetical.html
+++ b/test-output/old/Suite/methods-alphabetical.html
@@ -1,10 +1,16 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>Suite</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="92d386">  <td>21/10/23 11:35:32</td>   <td>0</td> <td>&nbsp;</td><td title="&lt;&lt;basetest.endTestCase()[pri:0, instance:com.makemytrip.testcases.homepagetestcases@1838ccb8]">&lt;&lt;endTestCase</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@908084672</td>   <td></td> </tr>
-<tr bgcolor="92d386">  <td>21/10/23 11:35:12</td>   <td>-20012</td> <td>&nbsp;</td><td title="&gt;&gt;basetest.setUp()[pri:0, instance:com.makemytrip.testcases.homepagetestcases@1838ccb8]">&gt;&gt;setUp</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@908084672</td>   <td></td> </tr>
-<tr bgcolor="a9a9c1">  <td>21/10/23 11:35:25</td>   <td>-7338</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="homepagetestcases.verifyTripSelection()[pri:0, instance:com.makemytrip.testcases.homepagetestcases@1838ccb8]">verifyTripSelection</td> 
-  <td>main@908084672</td>   <td></td> </tr>
+<tr bgcolor="bbb77c">  <td>21/10/24 19:04:01</td>   <td>0</td> <td>&nbsp;</td><td title="&lt;&lt;basetest.endTestCase()[pri:0, instance:com.makemytrip.testcases.homepagetestcases@31add175]">&lt;&lt;endTestCase</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1971519316</td>   <td></td> </tr>
+<tr bgcolor="bbb77c">  <td>21/10/24 19:03:11</td>   <td>-50792</td> <td>&nbsp;</td><td title="&gt;&gt;basetest.setUp()[pri:0, instance:com.makemytrip.testcases.homepagetestcases@31add175]">&gt;&gt;setUp</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1971519316</td>   <td></td> </tr>
+<tr bgcolor="f6d3ac">  <td>21/10/24 19:03:28</td>   <td>-33099</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="homepagetestcases.verifyAllLinksText()[pri:1, instance:com.makemytrip.testcases.homepagetestcases@31add175]">verifyAllLinksText</td> 
+  <td>main@1971519316</td>   <td></td> </tr>
+<tr bgcolor="f6d3ac">  <td>21/10/24 19:03:28</td>   <td>-32912</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="homepagetestcases.verifyTripSelection()[pri:2, instance:com.makemytrip.testcases.homepagetestcases@31add175]">verifyTripSelection</td> 
+  <td>main@1971519316</td>   <td></td> </tr>
+<tr bgcolor="f6d3ac">  <td>21/10/24 19:03:23</td>   <td>-38355</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="homepagetestcases.verifyhomePageTitleTest()[pri:0, instance:com.makemytrip.testcases.homepagetestcases@31add175]">verifyhomePageTitleTest</td> 
+  <td>main@1971519316</td>   <td></td> </tr>
+<tr bgcolor="f6d3ac">  <td>21/10/24 19:03:28</td>   <td>-33178</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="homepagetestcases.verifyhompePageLogoTest()[pri:0, instance:com.makemytrip.testcases.homepagetestcases@31add175]">verifyhompePageLogoTest</td> 
+  <td>main@1971519316</td>   <td></td> </tr>
 </table>
